<resources>
    <string name="app_name">Manneken</string>
    <string name="title_activity_login">Masuk</string>
    <string name="spinnerhint">Pilih User</string>
    <string name="prompt_password">Password</string>
    <string name="action_masuk">Masuk</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rupiah">Rp.</string>
    <string name="textharga">Harga</string>
    <string name="hargaawal">0</string>
    <string name="textjumlah">Jumlah</string>
    <string name="textbtnproses">Pesan</string>
    <string name="textnambarang">Nama Barang</string>
    <string name="jumlahawal">0</string>
    <string name="text_btn_bayar">Bayar</string>
    <string name="kafe_item">Nama Item</string>
    <string name="kafe_jumlah">Jumlah Item</string>
    <string name="kafe_total">Total Harga</string>
    <string name="msg_no_notes">Daftar pesanan kosong</string>
    <string name="kafe_txt_totalharga">Total</string>
    <string name="kafe_txt_btndetail">Detail</string>
    <string name="prompt_re_password">Ulang password</string>
    <string name="prompt_password_ubah">Password baru</string>
    <string name="action_simpan">Simpan</string>
    <string name="msg_no_transaksi">Data kosong</string>
</resources>
